--- a/templates/user.html
+++ b/templates/user.html
@@ -27,6 +27,6 @@
     <div class="page-header">
         <h1>Hello, {{ name }}!</h1>
     </div>
-    <p>The local date and time is {{ current_time.strftime('%A, %B, %d, %Y %I:%M %p') }}</p>
-</div>
+    <p>The local date and time is {{ moment(current_time).format('LLL') }}.</p>
+    <p>That was {{ moment(current_time).fromNow(refresh=True) }}</p></div>
 {% endblock %}
