--- a/templates/base.html
+++ b/templates/base.html
@@ -7,5 +7,9 @@
     <body>
         {% block body %}
         {% endblock %}
+        {% block scripts %}
+        {{ super() }}
+        {{ moment.include_moment() }}
+        {% endblock %}
     </body>
 </html>
